# kitz

./: .dockerignore  .env.example  .env.railway.example  .gitignore  CLAUDE.md  Dockerfile  README.md  index.html  kitz-landing.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  railway.json  railway.toml
.claude/: settings.json
.github/workflows/: ci.yml
docker/: Dockerfile.agent-runtime  Dockerfile.channel-router  Dockerfile.contact-engine  Dockerfile.factory-api  Dockerfile.kitz-next  Dockerfile.pipeline-runner  Dockerfile.renewflo  Dockerfile.renewflow  Dockerfile.service
docs/: friday-database.md  friday-ops.md  happy-path-checklist.md  support-and-oncall.md
docs/deploy/: railway-supabase.md
docs/production/: 02-database.md  06-observability.md
kitz-academy/: README.md  curso.html  index.html
kitz-cli/: .env.example  CLAUDE.md  package.json
kitz-cli/src/: cli.ts
kitz_gateway/: __init__.py  auth.py  cli.py  db.py  email.py  server.py  tools.py
kitz_gateway_ts/: .env.example  CLAUDE.md  package-lock.json  package.json  tsconfig.json
kitz_gateway_ts/scripts/: send-test-reset-email.ts
kitz_gateway_ts/src/: config.ts  index.ts
prisma/: schema.prisma
renewflo/: .env.example  .gitignore  CLAUDE.md  package-lock.json  package.json  vercel.json  vite.config.ts
renewflo/server/: index.mjs  (+1 more)
renewflow.io/: Dockerfile  next.config.ts  package-lock.json  package.json  railway.toml
scripts/: happy-path-api.mjs  production-verify.sh  railway-deploy.sh  seed-kitz-skills.mjs
static_dist/: index.html
tests/: test_gateway.py
(+294 files in other folders)
